Program Enfants Class

--- a/Apropos.html
+++ b/Apropos.html
@@ -39,40 +39,51 @@
           <h1>Festiv'Halloween</h1>
           
       </header>
-    <img src="/assets/img/Restauration/colisee.jpg" alt="Photo du cinéma Le Colisée">
-    <h2>À Propos</h2>
-    <p>Beaucoup d’entre nous aime regarder des films d’horreur. On aime avoir peur, se faire suspendre, ressentir 
-        une certaine tension tout au long du film,... C’est pourquoi nous avons décidé d’organiser un festival de 
-        films focalisé sur l’horreur et l’épouvante, pour faire plaisir à un grand nombre d’entre nous. Il aura lieu 
-        pour la période d’halloween, afin d’être en harmonie avec l’ambiance de cette fête.</p>
-    <h3>Équipe</h3>
-    <p>Nous tenons à adresser un immense merci pour le dévouement et le travail acharné dans la mise en place du 
-        festival de films d'Halloween des organisateurs et de l’équipe technique. Votre passion et votre professionnalisme 
-        ont permis de créer une expérience mémorable pour tous les participants.
-        Chaque détail, de la sélection des films à l'ambiance festive, a contribué à faire de cet événement un 
-        véritable succès. Grâce à vous, nous avons pu célébrer l'esprit d'Halloween dans une atmosphère enrichissante 
-        et divertissante.
-        Merci encore pour votre engagement et votre créativité. J'ai hâte de participer à la prochaine édition !</p>
-    <h3>Charte du festival</h3>
-    <h4>Le partage</h4>
-    <p>Notre festival est principalement un moment de partage, où l’on se retrouve pour passer de bons moments. On 
-        partage tous en commun quelque chose qu’on aime : le cinéma et les films d’horreur. On se réunit tous ensemble,
-        des jeunes, des étudiants, des amateurs, des passionnés,... pour partager un même moment, en convivialité.</p>
-    <h3>La culture</h3>
-    <p>Notre festival est aussi un événement qui met un avant la culture cinématographique, notamment du genre de 
-        l’horreur, qui a fait beaucoup évoluer le cinéma. C’est un genre qui s’inscrit dans l’histoire du cinéma, et 
-        a pris une très grande place dans ce monde. Le festival permet de développer sa culture.</p>
-    <h3>La diversité</h3>
-    <p>Notre festival a pour but d’inclure tout le monde, il est ouvert à tous, pour tous les différents âges, les 
-        différentes origines, etc...</p>
-    <footer>
-        <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-        <p>Mentions légales</p>
-        <p>Politique de confidentialité</p>
-        <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
-        <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-        <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-        <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
-    </footer>
+
+<section class="about-section">
+        <img class="about-section__image" src="/assets/img/Restauration/colisee.jpg" alt="Photo du cinéma Le Colisée">
+        <h2 class="about-section__title">À Propos</h2>
+        <p class="about-section__text">Beaucoup d’entre nous aime regarder des films d’horreur. On aime avoir peur, se faire suspendre, ressentir une certaine 
+          tension tout au long du film,... C’est pourquoi nous avons décidé d’organiser un festival de films focalisé sur l’horreur et l’épouvante, pour faire 
+          plaisir à un grand nombre d’entre nous. Il aura lieu pour la période d’halloween, afin d’être en harmonie avec l’ambiance de cette fête.</p>
+    </section>
+
+    <section class="team-section">
+        <h3 class="team-section__title">Équipe</h3>
+        <p class="team-section__text">Nous tenons à adresser un immense merci pour le dévouement et le travail acharné dans la mise en place du festival de films 
+          d'Halloween des organisateurs et de l’équipe technique. Votre passion et votre professionnalisme ont permis de créer une expérience mémorable pour tous 
+          les participants. Chaque détail, de la sélection des films à l'ambiance festive, a contribué à faire de cet événement un véritable succès. Grâce à vous, 
+          nous avons pu célébrer l'esprit d'Halloween dans une atmosphère enrichissante et divertissante. Merci encore pour votre engagement et votre créativité. 
+          J'ai hâte de participer à la prochaine édition !</p>
+    </section>
+
+    <section class="charter-section">
+        <h3 class="charter-section__title">Charte du festival</h3>
+        <h4 class="charter-section__subtitle">Le partage</h4>
+        <p class="charter-section__text">Notre festival est principalement un moment de partage, où l’on se retrouve pour passer de bons moments. On partage tous 
+          en commun quelque chose qu’on aime : le cinéma et les films d’horreur. On se réunit tous ensemble, des jeunes, des étudiants, des amateurs, des passionnés,... 
+          pour partager un même moment, en convivialité.</p>
+        <h3 class="charter-section__subtitle">La culture</h3>
+        <p class="charter-section__text">Notre festival est aussi un événement qui met un avant la culture cinématographique, notamment du genre de l’horreur, qui a 
+          fait beaucoup évoluer le cinéma. C’est un genre qui s’inscrit dans l’histoire du cinéma, et a pris une très grande place dans ce monde. Le festival permet 
+          de développer sa culture.</p>
+        <h3 class="charter-section__subtitle">La diversité</h3>
+        <p class="charter-section__text">Notre festival a pour but d’inclure tout le monde, il est ouvert à tous, pour tous les différents âges, les différentes origines, 
+          etc...</p>
+</section>
+
+       <footer class="footer">
+          <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+          <div class="footer__links">
+              <p>Mentions légales</p>
+              <p>Politique de confidentialité</p>
+          </div>
+          <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+          <div class="footer__social">
+              <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+              <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+              <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+          </div>
+        </footer>
 </body>
 </html>
