--- a/EmmaTammi.html
+++ b/EmmaTammi.html
@@ -38,10 +38,12 @@
       <h1>Festiv'Halloween</h1>
       
   </header>
-<h2>Emma Tammi</h2>
-<img src="/assets/img/Invite/Emma-Tammi.jpeg" alt="Photo Emma Tammi">
-<h5>Biographie</h5>
-<p>Emma Tammi, née le 26 février 1982 à Middletown, Connecticut, est une réalisatrice, productrice et actrice 
+
+  <section class="director">
+        <h2 class="director__name">Emma Tammi</h2>
+        <img class="director__image" src="/assets/img/Invite/Emma-Tammi.jpeg" alt="Photo Emma Tammi">
+        <h5 class="director__subtitle">Biographie</h5>
+        <p class="director__bio">Emma Tammi, née le 26 février 1982 à Middletown, Connecticut, est une réalisatrice, productrice et actrice 
     américaine qui s'est fait un nom dans l'industrie cinématographique, particulièrement dans le genre de l'horreur.
     Tammi a étudié le cinéma à l'Université de Californie à Los Angeles (UCLA). Avant de se lancer dans la 
     réalisation, elle a travaillé sur plusieurs productions en tant qu'assistante et productrice, acquérant ainsi une 
@@ -49,16 +51,21 @@
     Son premier long-métrage en tant que réalisatrice, "The Wind" (2018), un western d'horreur, a été acclamé par la 
     critique lors de sa première au Festival international du film de Toronto. Ce film a établi Tammi comme une voix 
     prometteuse dans le cinéma de genre.</p> 
+  </section>
 
-<footer>
-<img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-<p>Mentions légales</p>
-<p>Politique de confidentialité</p>
-<img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
-<img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-<img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-<img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
-</footer>
+  <footer class="footer">
+      <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+      <div class="footer__links">
+          <p>Mentions légales</p>
+          <p>Politique de confidentialité</p>
+      </div>
+      <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+      <div class="footer__social">
+          <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+          <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+          <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+      </div>
+  </footer>
 </body>
 </html>
 <header>
