--- a/FilmAddams.html
+++ b/FilmAddams.html
@@ -36,21 +36,28 @@
           
           <h1>Festiv'Halloween</h1>
       </header>
-    <h2>Film pour enfants</h2>
-    <img src="/assets/img/Film/filmaddams.webp" alt="Film La famille Addams">
-    <h5>La Famille Addams </h5>
-    <a href="https://www.youtube.com/watch?v=9T5jMQxxtu0">
-        <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
+<section class="film">
+    <h2 class="film__title">Film pour enfants</h2>
+    <img class="film__image" src="/assets/img/Film/filmaddams.webp" alt="Film La famille Addams">
+    <h5 class="film__subtitle">La Famille Addams </h5>
+    <a class="film__trailer-link" href="https://www.youtube.com/watch?v=9T5jMQxxtu0">
+        <img class="film__trailer-button" src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
     </a>
-    <p>De 19h00 à 20h27 </p>
-    <p>Réalisateur : Conrad Vernon et Gerg Tiernan </p>
-    <p>Durée : 1h27 </p>
-    <p>à partir de 7 - 8 ans </p> 
-    <h3>Biographie des réalisateurs</h3>
-    <p>Conrad Vernon et Greg Tiernan sont deux réalisateurs et animateurs talentueux connus pour leur travail dans 
+</section>
+
+<section class="film-details">
+    <p class="film-details__time">De 19h00 à 20h27 </p>
+    <p class="film-details__director">Réalisateur : Conrad Vernon et Greg Tiernan </p>
+    <p class="film-details__duration">Durée : 1h27 </p>
+    <p class="film-details__age">à partir de 7 - 8 ans </p> 
+</section>
+
+<section class="directors">
+    <h3 class="directors__title">Biographie des réalisateurs</h3>
+    <p class="directors__description">Conrad Vernon et Greg Tiernan sont deux réalisateurs et animateurs talentueux connus pour leur travail dans 
         le cinéma d'animation.</p>
-    <img src="/assets/img/Réalisateur/Conrad Vernon et Gerg Tiernan.jpeg" alt="Photo Conrad Vernon et Gerg Tiernan">
-    <p>Conrad Vernon est un réalisateur, acteur et scénariste américain né le 11 juillet 1968. Il a commencé sa carrière 
+    <img class="directors__image" src="/assets/img/Réalisateur/Conrad Vernon et Gerg Tiernan.jpeg" alt="Photo Conrad Vernon et Gerg Tiernan">
+    <p class="directors__bio">Conrad Vernon est un réalisateur, acteur et scénariste américain né le 11 juillet 1968. Il a commencé sa carrière 
         chez DreamWorks Animation, où il a contribué à des films emblématiques tels que Shrek 2 (2004), pour lequel il a 
         co-réalisé et prêté sa voix à plusieurs personnages. Il est également connu pour son travail sur Monstres contre 
         Aliens (2009) et Madagascar 3 : Bons baisers d'Europe (2012). Sa carrière s'est distinguée par sa capacité à 
@@ -66,21 +73,29 @@
         et audacieuses qui résonnent auprès des spectateurs adultes. Leur collaboration a également donné naissance à des films 
         comme La Famille Addams (2019) et sa suite La Famille Addams 2 (2021), des réinterprétations animées de la célèbre 
         famille gothique.</p>
-    <h3>Résumé du film</h3>
-    <img src="/assets/img/Film/FamilleAddams.png" alt="Image La famille Addams">
-    <p>La Famille Addams (2019) raconte l'installation de la célèbre famille excentrique dans un manoir isolé, où leur style 
+</section>
+
+<section class="summary">
+    <h3 class="summary__title">Résumé du film</h3>
+    <img class="summary__image" src="/assets/img/Film/FamilleAddams.png" alt="Image La famille Addams">
+    <p class="summary__text">La Famille Addams (2019) raconte l'installation de la célèbre famille excentrique dans un manoir isolé, où leur style 
         de vie gothique choque Margaux Needler, une animatrice télé obsédée par la perfection. Alors qu'ils préparent une 
         grande réunion familiale, les Addams doivent faire face aux préjugés des voisins, célébrant l'importance de l'acceptation 
         et de la tolérance dans une ambiance macabre et humoristique.</p>
+</section>
     
-     <footer>
-            <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-            <p>Mentions légales</p>
-            <p>Politique de confidentialité</p>
-            <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
-            <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-            <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-            <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
-    </footer>
+      <footer class="footer">
+          <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+          <div class="footer__links">
+              <p>Mentions légales</p>
+              <p>Politique de confidentialité</p>
+          </div>
+          <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+          <div class="footer__social">
+              <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+              <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+              <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+          </div>
+      </footer>
 </body>
 </html>
