--- a/FilmHocusPocus.html
+++ b/FilmHocusPocus.html
@@ -36,45 +36,61 @@
           
           <h1>Festiv'Halloween</h1>
       </header>
-    <h2>Film pour enfants</h2>
-    <img src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
-    <h5>Hocus Pocus </h5>
-    <a href="https://www.youtube.com/watch?v=jmXcQv2g6b8">
-        <img src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
-    </a>
-    <p>De 21h50 à 23h26 </p>
-    <p>Réalisateur : Kenny Ortega </p>
-    <p>Durée : 1h36 </p>
-    <p>à partir de 9 ans </p> 
-    <h3>Biographie du réalisateur</h3>
-    <img src="/assets/img/Réalisateur/Kenny Ortega.webp" alt="Photo Kenny Ortega">
-    <p>Kenny Ortega est un réalisateur, chorégraphe et producteur américain, né le 18 avril 1950 à Palo Alto, Californie. 
+
+<section class="film">
+      <h2 class="film__title">Film pour enfants</h2>
+      <img class="film__image" src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
+      <h5 class="film__subtitle">Hocus Pocus</h5>
+      <a class="film__trailer-link" href="https://www.youtube.com/watch?v=jmXcQv2g6b8">
+          <img class="film__trailer-button" src="/assets/icons/btnBandeAnnonce.svg" alt="Bouton bande annonce">
+      </a>
+  </section>
+  
+  <section class="film-details">
+      <p class="film-details__time">De 21h50 à 23h26</p>
+      <p class="film-details__director">Réalisateur : Kenny Ortega</p>
+      <p class="film-details__duration">Durée : 1h36 </p>
+      <p class="film-details__age">à partir de 9 ans </p> 
+  </section>
+  
+  <section class="directors">
+      <h3 class="directors__title">Biographie du réalisateur</h3>
+      <img class="directors__image" src="/assets/img/Réalisateur/Kenny Ortega.webp" alt="Photo Kenny Ortega">
+      <p class="directors__bio">Kenny Ortega est un réalisateur, chorégraphe et producteur américain, né le 18 avril 1950 à Palo Alto, Californie. 
         Il a commencé sa carrière artistique à 13 ans et a gagné en notoriété dans les années 80 en chorégraphiant pour des 
         artistes comme Cher et Michael Jackson.
         Ortega est surtout connu pour ses films musicaux pour Disney, notamment la trilogie High School Musical, Newsies, 
         et Hocus Pocus. Il a également réalisé Michael Jackson's This Is It et la série de films Descendants.
         Au cours de sa carrière, il a remporté plusieurs prix, dont 6 Emmy Awards. Kenny Ortega reste une figure influente 
         dans l'industrie du divertissement, alliant chorégraphie et réalisation avec succès.</p>
-    <h3>Résumé du film</h3>
-    <p>L'histoire commence en 1693 à Salem, où Thackery Binx découvre que sa sœur Emily a été enlevée par les sœurs Sanderson, 
+  </section>
+  
+  <section class="summary">
+      <h3 class="summary__title">Résumé du film</h3>
+      <p class="summary__text">L'histoire commence en 1693 à Salem, où Thackery Binx découvre que sa sœur Emily a été enlevée par les sœurs Sanderson, 
         trois sorcières : Winifred, Mary et Sarah. Elles drainent la vie d'Emily pour retrouver leur jeunesse. Thackery tente 
         de les arrêter, mais échoue et est maudit par les sorcières, transformé en chat noir immortel. Les sorcières sont 
         finalement capturées et pendues, mais avant leur exécution, Winifred jette une malédiction qui leur permettra de revenir 
         à la vie si une âme pure allume la bougie à flamme noire lors d'une pleine lune.</p>
-    <img src="/assets/img/Film/hocuspocus.png" alt="Image Hocus Pocus">
-    <p>Trois siècles plus tard, en 1993, Max Dennison, un adolescent sceptique récemment déménagé à Salem, accompagne sa sœur 
+        <img class="summary__image" src="/assets/img/Film/hocuspocus.png" alt="Image Hocus Pocus">
+        <p class="summary__text">Trois siècles plus tard, en 1993, Max Dennison, un adolescent sceptique récemment déménagé à Salem, accompagne sa sœur 
         Dani pour la collecte de bonbons d'Halloween. Ils rencontrent Allison, une camarade de classe dont Max est amoureux. 
         En visitant la maison des Sandersons, Max allume accidentellement la bougie maudite, réveillant ainsi les sorcières qui 
         cherchent à voler l'âme des enfants pour rester jeunes.</p>
+  </section>
 
-     <footer>
-            <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-            <p>Mentions légales</p>
-            <p>Politique de confidentialité</p>
-            <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
-            <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-            <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-            <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
-    </footer>
+<footer class="footer">
+    <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+    <div class="footer__links">
+        <p>Mentions légales</p>
+        <p>Politique de confidentialité</p>
+    </div>
+    <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+    <div class="footer__social">
+        <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+        <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+        <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+    </div>
+</footer>
 </body>
 </html>
