--- a/AndresMuschietti.html
+++ b/AndresMuschietti.html
@@ -39,25 +39,30 @@
           <h1>Festiv'Halloween</h1>
           
       </header>
-      <h2>Andrès Muschietti</h2>
-        <img src="/assets/img/Invite/Andres_Muschietti.jpeg" alt="Photo Andrès Muschietti">
-        <h5>Biographie</h5>
-        <p>Andrès Muschietti est un réalisateur et producteur argentin né le 26 août 1973 à Buenos Aires. Il 
+      <section class="director">
+        <h2 class="director__name">Andrès Muschietti</h2>
+        <img class="director__image" src="/assets/img/Invite/Andres_Muschietti.jpeg" alt="Photo Andrès Muschietti">
+        <h5 class="director__subtitle">Biographie</h5>
+        <p class="director__bio">Andrès Muschietti est un réalisateur et producteur argentin né le 26 août 1973 à Buenos Aires. Il 
             débute sa carrière en 1999 avec deux courts métrages. Son premier long-métrage, "Mama" (2013), produit 
             par Guillermo del Toro, connaît un grand succès critique et commercial. Muschietti se fait surtout 
             connaître en réalisant l'adaptation du roman de Stephen King "Ça" (2017) et sa suite "Ça : Chapitre 2" 
             (2019). Ces films d'horreur rencontrent un important succès au box-office.Plus récemment, il a réalisé 
             le blockbuster de super-héros "The Flash" (2023). Ses prochains projets incluent l'adaptation du manga 
             "L'Attaque des Titans" et un film Batman intitulé "The Brave and the Bold".</p> 
-            
-    <footer>
-        <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-        <p>Mentions légales</p>
-        <p>Politique de confidentialité</p>
-        <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
-        <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-        <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-        <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
-    </footer>
+      </section>   
+       <footer class="footer">
+              <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+              <div class="footer__links">
+                  <p>Mentions légales</p>
+                  <p>Politique de confidentialité</p>
+              </div>
+              <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+              <div class="footer__social">
+                  <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+                  <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+                  <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+              </div>
+        </footer>     
 </body>
 </html>
