--- a/FilmConjuring.html
+++ b/FilmConjuring.html
@@ -61,14 +61,18 @@
         la plus redoutable de leur carrière. Ils luttent contre le temps pour sauver la famille, en particulier Carolyn qui est de plus en plus 
         influencée par l'entité maléfique.</p>
 
-     <footer>
-            <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-            <p>Mentions légales</p>
-            <p>Politique de confidentialité</p>
-            <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
-            <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-            <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-            <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
-    </footer>
+     <footer class="footer">
+          <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+          <div class="footer__links">
+              <p>Mentions légales</p>
+              <p>Politique de confidentialité</p>
+          </div>
+          <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+          <div class="footer__social">
+              <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+              <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+              <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+          </div>
+      </footer>
 </body>
 </html>
