--- a/Filmanimaltronix.html
+++ b/Filmanimaltronix.html
@@ -63,14 +63,19 @@
     <p>En parallèle, il veille sur sa jeune sœur Abby, et se retrouve rapidement plongé dans un univers de terreur où les fantômes du passé 
         refont surface. Le film mélange les frayeurs typiques des jeux avec un mystère autour de la pizzeria, créant une atmosphère oppressante 
         et pleine de tension alors que Mike tente de comprendre et d'échapper à ces créatures mécaniques meurtrières.</p>
-     <footer>
-            <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-            <p>Mentions légales</p>
-            <p>Politique de confidentialité</p>
-            <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
-            <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-            <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-            <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
-    </footer>
+
+      <footer class="footer">
+          <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+          <div class="footer__links">
+              <p>Mentions légales</p>
+              <p>Politique de confidentialité</p>
+          </div>
+          <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+          <div class="footer__social">
+              <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+              <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+              <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+          </div>
+      </footer>
 </body>
 </html>
