--- a/ProgrammeEnfant.html
+++ b/ProgrammeEnfant.html
@@ -99,14 +99,18 @@
 <p>Durée : 1h40</p>
 <p>À partir de 11 ans</p>
 
-<footer>
-    <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-    <p>Mentions légales</p>
-    <p>Politique de confidentialité</p>
-    <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
-    <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-    <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-    <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+<footer class="footer">
+  <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+  <div class="footer__links">
+      <p>Mentions légales</p>
+      <p>Politique de confidentialité</p>
+  </div>
+  <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+  <div class="footer__social">
+      <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+      <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+      <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+  </div>
 </footer>
 
 </body>
