--- a/index.html
+++ b/index.html
@@ -155,14 +155,18 @@
   <img src="/assets/icons/btn-en-savoir-plus.svg" alt="Bouton en savoir plus">
 </a>
 
-<footer>
-    <img src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-    <p>Mentions légales</p>
-    <p>Politique de confidentialité</p>
-    <img src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
-    <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-    <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-    <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+<footer class="footer">
+  <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+  <div class="footer__links">
+      <p>Mentions légales</p>
+      <p>Politique de confidentialité</p>
+  </div>
+  <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b684411.jpg" alt="Image chaudron de sorcière">
+  <div class="footer__social">
+      <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+      <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+      <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+  </div>
 </footer>
 
 </body>
